docs/api/qiskit/0.25/qiskit.algorithms.optimizers.SLSQP.mdx
---
title: SLSQP
description: API reference for qiskit.algorithms.optimizers.SLSQP
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.optimizers.SLSQP
---

# qiskit.algorithms.optimizers.SLSQP

<Class id="qiskit.algorithms.optimizers.SLSQP" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/algorithms/optimizers/slsqp.py" signature="SLSQP(maxiter=100, disp=False, ftol=1e-06, tol=None, eps=1.4901161193847656e-08)" modifiers="class">
  Sequential Least SQuares Programming optimizer.

  SLSQP minimizes a function of several variables with any combination of bounds, equality and inequality constraints. The method wraps the SLSQP Optimization subroutine originally implemented by Dieter Kraft.

  SLSQP is ideal for mathematical problems for which the objective function and the constraints are twice continuously differentiable. Note that the wrapper handles infinite values in bounds by converting them into large floating values.

  Uses scipy.optimize.minimize SLSQP. For further detail, please refer to See [https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.minimize.html](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.minimize.html)

  **Parameters**

  *   **maxiter** (`int`) – Maximum number of iterations.
  *   **disp** (`bool`) – Set to True to print convergence messages.
  *   **ftol** (`float`) – Precision goal for the value of f in the stopping criterion.
  *   **tol** (`Optional`\[`float`]) – Tolerance for termination.
  *   **eps** (`float`) – Step size used for numerical approximation of the Jacobian.

  ### \_\_init\_\_

  <Function id="qiskit.algorithms.optimizers.SLSQP.__init__" signature="__init__(maxiter=100, disp=False, ftol=1e-06, tol=None, eps=1.4901161193847656e-08)">
    **Parameters**

    *   **maxiter** (`int`) – Maximum number of iterations.
    *   **disp** (`bool`) – Set to True to print convergence messages.
    *   **ftol** (`float`) – Precision goal for the value of f in the stopping criterion.
    *   **tol** (`Optional`\[`float`]) – Tolerance for termination.
    *   **eps** (`float`) – Step size used for numerical approximation of the Jacobian.
  </Function>

  ## Methods

  |                                                                                                                                                                  |                                                                                                           |
  | ---------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.algorithms.optimizers.SLSQP.__init__ "qiskit.algorithms.optimizers.SLSQP.__init__")(\[maxiter, disp, ftol, tol, eps])                       | **type maxiter**`int`                                                                                     |
  | [`get_support_level`](#qiskit.algorithms.optimizers.SLSQP.get_support_level "qiskit.algorithms.optimizers.SLSQP.get_support_level")()                            | Return support level dictionary                                                                           |
  | [`gradient_num_diff`](#qiskit.algorithms.optimizers.SLSQP.gradient_num_diff "qiskit.algorithms.optimizers.SLSQP.gradient_num_diff")(x\_center, f, epsilon\[, …]) | We compute the gradient with the numeric differentiation in the parallel way, around the point x\_center. |
  | [`optimize`](#qiskit.algorithms.optimizers.SLSQP.optimize "qiskit.algorithms.optimizers.SLSQP.optimize")(num\_vars, objective\_function\[, …])                   | Perform optimization.                                                                                     |
  | [`print_options`](#qiskit.algorithms.optimizers.SLSQP.print_options "qiskit.algorithms.optimizers.SLSQP.print_options")()                                        | Print algorithm-specific options.                                                                         |
  | [`set_max_evals_grouped`](#qiskit.algorithms.optimizers.SLSQP.set_max_evals_grouped "qiskit.algorithms.optimizers.SLSQP.set_max_evals_grouped")(limit)           | Set max evals grouped                                                                                     |
  | [`set_options`](#qiskit.algorithms.optimizers.SLSQP.set_options "qiskit.algorithms.optimizers.SLSQP.set_options")(\*\*kwargs)                                    | Sets or updates values in the options dictionary.                                                         |
  | [`wrap_function`](#qiskit.algorithms.optimizers.SLSQP.wrap_function "qiskit.algorithms.optimizers.SLSQP.wrap_function")(function, args)                          | Wrap the function to implicitly inject the args at the call of the function.                              |

  ## Attributes

  |                                                                                                                                                                   |                                     |
  | ----------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------- |
  | [`bounds_support_level`](#qiskit.algorithms.optimizers.SLSQP.bounds_support_level "qiskit.algorithms.optimizers.SLSQP.bounds_support_level")                      | Returns bounds support level        |
  | [`gradient_support_level`](#qiskit.algorithms.optimizers.SLSQP.gradient_support_level "qiskit.algorithms.optimizers.SLSQP.gradient_support_level")                | Returns gradient support level      |
  | [`initial_point_support_level`](#qiskit.algorithms.optimizers.SLSQP.initial_point_support_level "qiskit.algorithms.optimizers.SLSQP.initial_point_support_level") | Returns initial point support level |
  | [`is_bounds_ignored`](#qiskit.algorithms.optimizers.SLSQP.is_bounds_ignored "qiskit.algorithms.optimizers.SLSQP.is_bounds_ignored")                               | Returns is bounds ignored           |
  | [`is_bounds_required`](#qiskit.algorithms.optimizers.SLSQP.is_bounds_required "qiskit.algorithms.optimizers.SLSQP.is_bounds_required")                            | Returns is bounds required          |
  | [`is_bounds_supported`](#qiskit.algorithms.optimizers.SLSQP.is_bounds_supported "qiskit.algorithms.optimizers.SLSQP.is_bounds_supported")                         | Returns is bounds supported         |
  | [`is_gradient_ignored`](#qiskit.algorithms.optimizers.SLSQP.is_gradient_ignored "qiskit.algorithms.optimizers.SLSQP.is_gradient_ignored")                         | Returns is gradient ignored         |
  | [`is_gradient_required`](#qiskit.algorithms.optimizers.SLSQP.is_gradient_required "qiskit.algorithms.optimizers.SLSQP.is_gradient_required")                      | Returns is gradient required        |
  | [`is_gradient_supported`](#qiskit.algorithms.optimizers.SLSQP.is_gradient_supported "qiskit.algorithms.optimizers.SLSQP.is_gradient_supported")                   | Returns is gradient supported       |
  | [`is_initial_point_ignored`](#qiskit.algorithms.optimizers.SLSQP.is_initial_point_ignored "qiskit.algorithms.optimizers.SLSQP.is_initial_point_ignored")          | Returns is initial point ignored    |
  | [`is_initial_point_required`](#qiskit.algorithms.optimizers.SLSQP.is_initial_point_required "qiskit.algorithms.optimizers.SLSQP.is_initial_point_required")       | Returns is initial point required   |
  | [`is_initial_point_supported`](#qiskit.algorithms.optimizers.SLSQP.is_initial_point_supported "qiskit.algorithms.optimizers.SLSQP.is_initial_point_supported")    | Returns is initial point supported  |
  | [`setting`](#qiskit.algorithms.optimizers.SLSQP.setting "qiskit.algorithms.optimizers.SLSQP.setting")                                                             | Return setting                      |

  ### bounds\_support\_level

  <Function id="qiskit.algorithms.optimizers.SLSQP.bounds_support_level" signature="bounds_support_level" modifiers="property">
    Returns bounds support level
  </Function>

  ### get\_support\_level

  <Function id="qiskit.algorithms.optimizers.SLSQP.get_support_level" signature="get_support_level()">
    Return support level dictionary
  </Function>

  ### gradient\_num\_diff

  <Function id="qiskit.algorithms.optimizers.SLSQP.gradient_num_diff" signature="gradient_num_diff(x_center, f, epsilon, max_evals_grouped=1)" modifiers="static">
    We compute the gradient with the numeric differentiation in the parallel way, around the point x\_center.

    **Parameters**

    *   **x\_center** (*ndarray*) – point around which we compute the gradient
    *   **f** (*func*) – the function of which the gradient is to be computed.
    *   **epsilon** (*float*) – the epsilon used in the numeric differentiation.
    *   **max\_evals\_grouped** (*int*) – max evals grouped

    **Returns**

    the gradient computed

    **Return type**

    grad
  </Function>

  ### gradient\_support\_level

  <Function id="qiskit.algorithms.optimizers.SLSQP.gradient_support_level" signature="gradient_support_level" modifiers="property">
    Returns gradient support level
  </Function>

  ### initial\_point\_support\_level

  <Function id="qiskit.algorithms.optimizers.SLSQP.initial_point_support_level" signature="initial_point_support_level" modifiers="property">
    Returns initial point support level
  </Function>

  ### is\_bounds\_ignored

  <Function id="qiskit.algorithms.optimizers.SLSQP.is_bounds_ignored" signature="is_bounds_ignored" modifiers="property">
    Returns is bounds ignored
  </Function>

  ### is\_bounds\_required

  <Function id="qiskit.algorithms.optimizers.SLSQP.is_bounds_required" signature="is_bounds_required" modifiers="property">
    Returns is bounds required
  </Function>

  ### is\_bounds\_supported

  <Function id="qiskit.algorithms.optimizers.SLSQP.is_bounds_supported" signature="is_bounds_supported" modifiers="property">
    Returns is bounds supported
  </Function>

  ### is\_gradient\_ignored

  <Function id="qiskit.algorithms.optimizers.SLSQP.is_gradient_ignored" signature="is_gradient_ignored" modifiers="property">
    Returns is gradient ignored
  </Function>

  ### is\_gradient\_required

  <Function id="qiskit.algorithms.optimizers.SLSQP.is_gradient_required" signature="is_gradient_required" modifiers="property">
    Returns is gradient required
  </Function>

  ### is\_gradient\_supported

  <Function id="qiskit.algorithms.optimizers.SLSQP.is_gradient_supported" signature="is_gradient_supported" modifiers="property">
    Returns is gradient supported
  </Function>

  ### is\_initial\_point\_ignored

  <Function id="qiskit.algorithms.optimizers.SLSQP.is_initial_point_ignored" signature="is_initial_point_ignored" modifiers="property">
    Returns is initial point ignored
  </Function>

  ### is\_initial\_point\_required

  <Function id="qiskit.algorithms.optimizers.SLSQP.is_initial_point_required" signature="is_initial_point_required" modifiers="property">
    Returns is initial point required
  </Function>

  ### is\_initial\_point\_supported

  <Function id="qiskit.algorithms.optimizers.SLSQP.is_initial_point_supported" signature="is_initial_point_supported" modifiers="property">
    Returns is initial point supported
  </Function>

  ### optimize

  <Function id="qiskit.algorithms.optimizers.SLSQP.optimize" signature="optimize(num_vars, objective_function, gradient_function=None, variable_bounds=None, initial_point=None)">
    Perform optimization.

    **Parameters**

    *   **num\_vars** (*int*) – Number of parameters to be optimized.
    *   **objective\_function** (*callable*) – A function that computes the objective function.
    *   **gradient\_function** (*callable*) – A function that computes the gradient of the objective function, or None if not available.
    *   **variable\_bounds** (*list\[(float, float)]*) – List of variable bounds, given as pairs (lower, upper). None means unbounded.
    *   **initial\_point** (*numpy.ndarray\[float]*) – Initial point.

    **Returns**

    **point, value, nfev**

    point: is a 1D numpy.ndarray\[float] containing the solution value: is a float with the objective function value nfev: number of objective function calls made if available or None

    **Raises**

    **ValueError** – invalid input
  </Function>

  ### print\_options

  <Function id="qiskit.algorithms.optimizers.SLSQP.print_options" signature="print_options()">
    Print algorithm-specific options.
  </Function>

  ### set\_max\_evals\_grouped

  <Function id="qiskit.algorithms.optimizers.SLSQP.set_max_evals_grouped" signature="set_max_evals_grouped(limit)">
    Set max evals grouped
  </Function>

  ### set\_options

  <Function id="qiskit.algorithms.optimizers.SLSQP.set_options" signature="set_options(**kwargs)">
    Sets or updates values in the options dictionary.

    The options dictionary may be used internally by a given optimizer to pass additional optional values for the underlying optimizer/optimization function used. The options dictionary may be initially populated with a set of key/values when the given optimizer is constructed.

    **Parameters**

    **kwargs** (*dict*) – options, given as name=value.
  </Function>

  ### setting

  <Function id="qiskit.algorithms.optimizers.SLSQP.setting" signature="setting" modifiers="property">
    Return setting
  </Function>

  ### wrap\_function

  <Function id="qiskit.algorithms.optimizers.SLSQP.wrap_function" signature="wrap_function(function, args)" modifiers="static">
    Wrap the function to implicitly inject the args at the call of the function.

    **Parameters**

    *   **function** (*func*) – the target function
    *   **args** (*tuple*) – the args to be injected

    **Returns**

    wrapper

    **Return type**

    function\_wrapper
  </Function>
</Class>

